[tool.poetry]
name = "rich-nmap"
version = "0.0.2"
description = "Nmap wrapper with pretty output"
authors = ["dadevel"]
license = "MIT"
readme = "README.md"
packages = [{include = "rich_nmap"}]

[tool.poetry.scripts]
rich-nmap = "rich_nmap.main:main"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
