[tool.poetry]
name = "rich-nmap"
version = "0.0.5"
description = "Nmap wrapper with rich output"
authors = ["dadevel"]
license = "MIT"
readme = "README.md"
packages = [{include = "rmap"}]

[tool.poetry.scripts]
rmap = "rmap.main:main"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
rich = "^13.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
