[tool.poetry]
name = "nmapj"
version = "0.0.6"
description = "Nmap wrapper with JSONL output"
authors = ["dadevel"]
license = "MIT"
readme = "README.md"
packages = [{include = "nmapjson"}]

[tool.poetry.scripts]
nmapj = "nmapjson.main:main"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
